<resources>
    <string name="app_name">GoodsManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">首頁</string>
    <string name="postionlist">位置新增/修改</string>
    <string name="update">更新</string>
    <string name="add">新增</string>
    <string name="delete">刪除</string>
    <string name="cancel">取消</string>
    <string name="choose">選擇</string>
    <string name="search">搜尋</string>
    <string name="imgchoose">圖片選擇</string>
    <string name="ok">確認</string>
    <string name="imgdb">開啟圖庫</string>
    <string name="clear">清除</string>
    <string name="photo">開啟相機</string>
    <string name="rotate">旋轉</string>
    <string name="pisition_data">位置詳細資料</string>
</resources>
